--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 click==7.1.2
+coverage==7.6.11
 Flask==1.1.2
+freezegun==1.5.1
 iniconfig==2.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -8,4 +10,6 @@ packaging==24.2
 pluggy==1.5.0
 pytest==8.3.4
 pytest-flask==1.3.0
+python-dateutil==2.9.0.post0
+six==1.17.0
 Werkzeug==1.0.1
